--- a/coursework.html
+++ b/coursework.html
@@ -44,6 +44,7 @@
 			background-size: cover;
 			text-align: center;
 			padding-bottom: 30px;
+			padding-top: 30px;
 		}
 		.course {
 			margin-top: 30px;
