--- a/coursework.html
+++ b/coursework.html
@@ -45,6 +45,7 @@
 			text-align: center;
 			padding-bottom: 30px;
 			padding-top: 30px;
+			border-bottom: 5px solid;
 		}
 		.course {
 			margin-top: 30px;
